@@ -1,30 +1,13 @@
-<!doctype html>
-<html>
+<!doctype html>	
+<html lang="en">
 	<head>
-		<title>Generated documentation</title>
-		<style type="text/css">
-			body {
-				font-family: Arial, Helvetica, sans-serif;
-				background-color: #303030;
-				color: #90DD90;
-			}
-			/* unvisited link */
-			a:link {
-			  color: #EE6096;
-			}
-			/* visited link */
-			a:visited {
-			  color: #EE6096;
-			}
-			/* mouse over link */
-			a:hover {
-			  color: #EE6096;
-			}
-			/* selected link */
-			a:active {
-			  color: #EE6096;
-			}
-		</style>
+		<title>Generated document</title>
+		
+		
+		<meta http-equiv="content-language" content="en"/>		
+		<meta name="doc-version-compatibility" content="2-x"/>
+		
+		<link rel="stylesheet" href="https://venusguides.fugerit.org/src/css/default_venus_docs_style.css"/>
 	</head>
 	<body>
 		<div>
@@ -713,7 +696,6 @@
 		</tr>				
 				</tbody>
 		</table>
-</div>
-
-	</body>
+		</div>
+	</body>	
 </html>
