@@ -2,4 +2,6 @@ package org.fugerit.java.doc.lib.autodoc;
 
 public class AutodocModule {
 
+	public static final String DEFAULT_HTML_CSS_LINK = "https://venusguides.fugerit.org/src/css/default_venus_docs_style.css";
+	
 }
