@@ -16,7 +16,9 @@
 		<info name="page-width">29.7cm</info>
 		<info name="page-height">21cm</info>
 		<!-- language -->
-		<info name="doc-language">en</info> 		 
+		<info name="doc-language">en</info> 
+		<!-- style -->
+		<info name="html-css-link">https://venusguides.fugerit.org/src/css/default_venus_docs_style.css</info> 
 	</metadata>
 	<body>
 		
